Fix permalink spacing

--- a/src/templates/blogPost.scss
+++ b/src/templates/blogPost.scss
@@ -108,7 +108,7 @@ hr {
 .permalink {
   float: none;
   padding-right: 4px;
-  margin-left: -24px;
+  margin-left: -24px !important;
   width: 20px;
 
   svg {
